# python-gof

./: .gitignore  pyproject.toml
.github/workflows/: pytest.yml
clean_architecture/: controller.py  dependency.py  entity.py  i_presenter.py  i_repository.py  i_use_case.py  input_data.py  input_data_series.py  interactor.py  main.py  output_data.py  output_data_series.py  presenter.py  repository.py  view.py  view_model.py
creational_patterns/abstract_factory/: design.py  normal.py
creational_patterns/builder/: design.py  normal.py
creational_patterns/factory_method/: design.py  normal.py
creational_patterns/prototype/: design.py  normal.py
creational_patterns/singleton/: design.py  main.py
layered_architecture/: application.py  domain.py  infrastructure.py  main.py  model.py  presentation.py
